// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template: Work renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WorkTemplate
    data={
      Object {
        "markdownRemark": Object {
          "frontmatter": Object {
            "active": true,
            "dateEnd": "2015-01-01T00:00:00.000Z",
            "dateStart": "2012-01-01T00:00:00.000Z",
            "description": "Test desc",
            "skills": "test1, test2",
            "title": "Test",
            "url": "https://test.com",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/test",
      }
    }
    preview={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test desc"
          path="/test"
          title="Test"
        />,
        <a
          href="/"
        >
          back home
        </a>,
        <article>
          <header>
            <h1>
              Test
            </h1>
            <h2>
              <NiceDateComponent
                date="2012-01-01T00:00:00.000Z"
              />
               - 
              <NiceDateComponent
                date="2015-01-01T00:00:00.000Z"
              />
            </h2>
            <a
              href="https://test.com"
              rel="nofollow noopener"
              target="_blank"
            >
              Website
            </a>
            Skills: 
            <TagListComponent
              tags="test1, test2"
            />
          </header>
          <section
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />
          <footer>
            <p>
              Find a spelling mistake or issue with this item? 
              <br />
              <a
                href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                rel="nofollow noopener"
                target="_blank"
              >
                Submit a edit on Github
              </a>
            </p>
          </footer>
        </article>,
      ],
      "className": "work",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test desc",
          "path": "/test",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "back home",
          "href": "/",
        },
        "ref": null,
        "rendered": "back home",
        "type": "a",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <header>
              <h1>
                Test
              </h1>
              <h2>
                <NiceDateComponent
                  date="2012-01-01T00:00:00.000Z"
                />
                 - 
                <NiceDateComponent
                  date="2015-01-01T00:00:00.000Z"
                />
              </h2>
              <a
                href="https://test.com"
                rel="nofollow noopener"
                target="_blank"
              >
                Website
              </a>
              Skills: 
              <TagListComponent
                tags="test1, test2"
              />
            </header>,
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />,
            <footer>
              <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Test
                </h1>,
                <h2>
                  <NiceDateComponent
                    date="2012-01-01T00:00:00.000Z"
                  />
                   - 
                  <NiceDateComponent
                    date="2015-01-01T00:00:00.000Z"
                  />
                </h2>,
                <a
                  href="https://test.com"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Website
                </a>,
                "Skills: ",
                <TagListComponent
                  tags="test1, test2"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Test",
                },
                "ref": null,
                "rendered": "Test",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <NiceDateComponent
                      date="2012-01-01T00:00:00.000Z"
                    />,
                    " - ",
                    <NiceDateComponent
                      date="2015-01-01T00:00:00.000Z"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "date": "2012-01-01T00:00:00.000Z",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  " - ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "date": "2015-01-01T00:00:00.000Z",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Website",
                  "href": "https://test.com",
                  "rel": "nofollow noopener",
                  "target": "_blank",
                },
                "ref": null,
                "rendered": "Website",
                "type": "a",
              },
              "Skills: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "tags": "test1, test2",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "header",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>Test</p>",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Find a spelling mistake or issue with this item? ",
                  <br />,
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Find a spelling mistake or issue with this item? ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit a edit on Github",
                    "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md",
                    "rel": "nofollow noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Submit a edit on Github",
                  "type": "a",
                },
              ],
              "type": "p",
            },
            "type": "footer",
          },
        ],
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test desc"
            path="/test"
            title="Test"
          />,
          <a
            href="/"
          >
            back home
          </a>,
          <article>
            <header>
              <h1>
                Test
              </h1>
              <h2>
                <NiceDateComponent
                  date="2012-01-01T00:00:00.000Z"
                />
                 - 
                <NiceDateComponent
                  date="2015-01-01T00:00:00.000Z"
                />
              </h2>
              <a
                href="https://test.com"
                rel="nofollow noopener"
                target="_blank"
              >
                Website
              </a>
              Skills: 
              <TagListComponent
                tags="test1, test2"
              />
            </header>
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />
            <footer>
              <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>
          </article>,
        ],
        "className": "work",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test desc",
            "path": "/test",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "back home",
            "href": "/",
          },
          "ref": null,
          "rendered": "back home",
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <header>
                <h1>
                  Test
                </h1>
                <h2>
                  <NiceDateComponent
                    date="2012-01-01T00:00:00.000Z"
                  />
                   - 
                  <NiceDateComponent
                    date="2015-01-01T00:00:00.000Z"
                  />
                </h2>
                <a
                  href="https://test.com"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Website
                </a>
                Skills: 
                <TagListComponent
                  tags="test1, test2"
                />
              </header>,
              <section
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Test</p>",
                  }
                }
              />,
              <footer>
                <p>
                  Find a spelling mistake or issue with this item? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>
              </footer>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Test
                  </h1>,
                  <h2>
                    <NiceDateComponent
                      date="2012-01-01T00:00:00.000Z"
                    />
                     - 
                    <NiceDateComponent
                      date="2015-01-01T00:00:00.000Z"
                    />
                  </h2>,
                  <a
                    href="https://test.com"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Website
                  </a>,
                  "Skills: ",
                  <TagListComponent
                    tags="test1, test2"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Test",
                  },
                  "ref": null,
                  "rendered": "Test",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <NiceDateComponent
                        date="2012-01-01T00:00:00.000Z"
                      />,
                      " - ",
                      <NiceDateComponent
                        date="2015-01-01T00:00:00.000Z"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "date": "2012-01-01T00:00:00.000Z",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    " - ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "date": "2015-01-01T00:00:00.000Z",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Website",
                    "href": "https://test.com",
                    "rel": "nofollow noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Website",
                  "type": "a",
                },
                "Skills: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "tags": "test1, test2",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "header",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>Test</p>",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Find a spelling mistake or issue with this item? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Find a spelling mistake or issue with this item? ",
                    <br />,
                    <a
                      href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                      rel="nofollow noopener"
                      target="_blank"
                    >
                      Submit a edit on Github
                    </a>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Find a spelling mistake or issue with this item? ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "br",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Submit a edit on Github",
                      "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md",
                      "rel": "nofollow noopener",
                      "target": "_blank",
                    },
                    "ref": null,
                    "rendered": "Submit a edit on Github",
                    "type": "a",
                  },
                ],
                "type": "p",
              },
              "type": "footer",
            },
          ],
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Template: Work renders inactive 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WorkTemplate
    data={
      Object {
        "markdownRemark": Object {
          "frontmatter": Object {
            "active": false,
            "dateEnd": "2015-01-01T00:00:00.000Z",
            "dateStart": "2012-01-01T00:00:00.000Z",
            "description": "Test desc",
            "skills": "test1, test2",
            "title": "Test",
            "url": "https://test.com",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/test",
      }
    }
    preview={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test desc"
          path="/test"
          title="Test"
        />,
        <a
          href="/"
        >
          back home
        </a>,
        <article>
          <header>
            <h1>
              Test
            </h1>
            <h2>
              <NiceDateComponent
                date="2012-01-01T00:00:00.000Z"
              />
               - 
              <NiceDateComponent
                date="2015-01-01T00:00:00.000Z"
              />
            </h2>
            <span>
              https://test.com
            </span>
            Skills: 
            <TagListComponent
              tags="test1, test2"
            />
          </header>
          <section
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />
          <footer>
            <p>
              Find a spelling mistake or issue with this item? 
              <br />
              <a
                href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                rel="nofollow noopener"
                target="_blank"
              >
                Submit a edit on Github
              </a>
            </p>
          </footer>
        </article>,
      ],
      "className": "work",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test desc",
          "path": "/test",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "back home",
          "href": "/",
        },
        "ref": null,
        "rendered": "back home",
        "type": "a",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <header>
              <h1>
                Test
              </h1>
              <h2>
                <NiceDateComponent
                  date="2012-01-01T00:00:00.000Z"
                />
                 - 
                <NiceDateComponent
                  date="2015-01-01T00:00:00.000Z"
                />
              </h2>
              <span>
                https://test.com
              </span>
              Skills: 
              <TagListComponent
                tags="test1, test2"
              />
            </header>,
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />,
            <footer>
              <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Test
                </h1>,
                <h2>
                  <NiceDateComponent
                    date="2012-01-01T00:00:00.000Z"
                  />
                   - 
                  <NiceDateComponent
                    date="2015-01-01T00:00:00.000Z"
                  />
                </h2>,
                <span>
                  https://test.com
                </span>,
                "Skills: ",
                <TagListComponent
                  tags="test1, test2"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Test",
                },
                "ref": null,
                "rendered": "Test",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <NiceDateComponent
                      date="2012-01-01T00:00:00.000Z"
                    />,
                    " - ",
                    <NiceDateComponent
                      date="2015-01-01T00:00:00.000Z"
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "date": "2012-01-01T00:00:00.000Z",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  " - ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "date": "2015-01-01T00:00:00.000Z",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "https://test.com",
                },
                "ref": null,
                "rendered": "https://test.com",
                "type": "span",
              },
              "Skills: ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "tags": "test1, test2",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "header",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>Test</p>",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Find a spelling mistake or issue with this item? ",
                  <br />,
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Find a spelling mistake or issue with this item? ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit a edit on Github",
                    "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md",
                    "rel": "nofollow noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Submit a edit on Github",
                  "type": "a",
                },
              ],
              "type": "p",
            },
            "type": "footer",
          },
        ],
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test desc"
            path="/test"
            title="Test"
          />,
          <a
            href="/"
          >
            back home
          </a>,
          <article>
            <header>
              <h1>
                Test
              </h1>
              <h2>
                <NiceDateComponent
                  date="2012-01-01T00:00:00.000Z"
                />
                 - 
                <NiceDateComponent
                  date="2015-01-01T00:00:00.000Z"
                />
              </h2>
              <span>
                https://test.com
              </span>
              Skills: 
              <TagListComponent
                tags="test1, test2"
              />
            </header>
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />
            <footer>
              <p>
                Find a spelling mistake or issue with this item? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>
          </article>,
        ],
        "className": "work",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test desc",
            "path": "/test",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "back home",
            "href": "/",
          },
          "ref": null,
          "rendered": "back home",
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <header>
                <h1>
                  Test
                </h1>
                <h2>
                  <NiceDateComponent
                    date="2012-01-01T00:00:00.000Z"
                  />
                   - 
                  <NiceDateComponent
                    date="2015-01-01T00:00:00.000Z"
                  />
                </h2>
                <span>
                  https://test.com
                </span>
                Skills: 
                <TagListComponent
                  tags="test1, test2"
                />
              </header>,
              <section
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Test</p>",
                  }
                }
              />,
              <footer>
                <p>
                  Find a spelling mistake or issue with this item? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>
              </footer>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Test
                  </h1>,
                  <h2>
                    <NiceDateComponent
                      date="2012-01-01T00:00:00.000Z"
                    />
                     - 
                    <NiceDateComponent
                      date="2015-01-01T00:00:00.000Z"
                    />
                  </h2>,
                  <span>
                    https://test.com
                  </span>,
                  "Skills: ",
                  <TagListComponent
                    tags="test1, test2"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Test",
                  },
                  "ref": null,
                  "rendered": "Test",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <NiceDateComponent
                        date="2012-01-01T00:00:00.000Z"
                      />,
                      " - ",
                      <NiceDateComponent
                        date="2015-01-01T00:00:00.000Z"
                      />,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "date": "2012-01-01T00:00:00.000Z",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    " - ",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "date": "2015-01-01T00:00:00.000Z",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "https://test.com",
                  },
                  "ref": null,
                  "rendered": "https://test.com",
                  "type": "span",
                },
                "Skills: ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "tags": "test1, test2",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "header",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>Test</p>",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Find a spelling mistake or issue with this item? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Find a spelling mistake or issue with this item? ",
                    <br />,
                    <a
                      href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md"
                      rel="nofollow noopener"
                      target="_blank"
                    >
                      Submit a edit on Github
                    </a>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Find a spelling mistake or issue with this item? ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "br",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Submit a edit on Github",
                      "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/test.md",
                      "rel": "nofollow noopener",
                      "target": "_blank",
                    },
                    "ref": null,
                    "rendered": "Submit a edit on Github",
                    "type": "a",
                  },
                ],
                "type": "p",
              },
              "type": "footer",
            },
          ],
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Template: Work renders preview 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WorkTemplate
    data={
      Object {
        "markdownRemark": Object {
          "frontmatter": Object {
            "active": true,
            "dateEnd": "2015-01-01T00:00:00.000Z",
            "dateStart": "2012-01-01T00:00:00.000Z",
            "description": "Test desc",
            "skills": "test1, test2",
            "title": "Test",
            "url": "https://test.com",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/test",
      }
    }
    preview={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SEOTagsComponent
          description="Test desc"
          path="/test"
          title="Test"
        />,
        <a
          href="/"
        >
          back home
        </a>,
        <div>
          &lt;p&gt;Test&lt;/p&gt;
        </div>,
      ],
      "className": "work",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "description": "Test desc",
          "path": "/test",
          "title": "Test",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "back home",
          "href": "/",
        },
        "ref": null,
        "rendered": "back home",
        "type": "a",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "<p>Test</p>",
        },
        "ref": null,
        "rendered": "<p>Test</p>",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SEOTagsComponent
            description="Test desc"
            path="/test"
            title="Test"
          />,
          <a
            href="/"
          >
            back home
          </a>,
          <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>,
        ],
        "className": "work",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "description": "Test desc",
            "path": "/test",
            "title": "Test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "back home",
            "href": "/",
          },
          "ref": null,
          "rendered": "back home",
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "<p>Test</p>",
          },
          "ref": null,
          "rendered": "<p>Test</p>",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
